# openzfs

cmd/os/macos/zfs-pool-importer/zfs-pool-importer/: Makefile.am
etc/launchd/daemons/: Makefile.am  org.openzfsonosx.zfs-pool-importer.plist.in
